syntax = "proto2";
package errorpb;

message NotLeader {
    optional uint64 region_id          = 1;
    optional uint64 leader_store_id    = 2;
}

message RegionNotFound {
    optional uint64 region_id = 1;
}

message KeyNotInRegion {
    optional bytes key         = 1;
    optional uint64 region_id  = 2;
    optional bytes start_key   = 3;
    optional bytes end_key     = 4;
}

message StaleEpoch {
}

message Error {
    optional string message                     = 1;
    optional NotLeader not_leader               = 2;
    optional RegionNotFound region_not_found    = 3;
    optional KeyNotInRegion key_not_in_region   = 4;
    optional StaleEpoch stale_epoch             = 5;
}